Cambio numer tres :V

--- a/YourPett/Pages/Formulario.razor
+++ b/YourPett/Pages/Formulario.razor
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div>
-                <img class="your" src="./css/4.png"
+                <img class="your" src="./css/4.png">
             </div>
             <div class="col-xs-12">
                 <div class="iconos">
